     (courtesy of Timo Thonhauser)
   * PW: TB09 meta-GGA functional (requires libxc)
   * PW: the code can capture "signals". typically sent by batch queues
     when allowed time is close to expire, and terminate gracefully.
     Experimental, to be enabled at compile time (see the user guide)
   * TDDFPT: Implemented a restart option in turbo_Davidson

Fixed in svn version:

   * CP: Wannier functions dynamics with nspin=2 wasn't working
   * PWscf: restart in variable-cell case wasn't working in v.5.1
   * pot_extrapolation='none' was crashing with a bogus error message
   * PHonon: the recently introduced fix to the G=0 component of the 
     deformation potential at q=0 was not working properly
   * Kernel table for rVV10 nonlocal functional was not written to file,
     breaking restart and postprocessing (no problem for scf)
   * Strange compilation bug on some IBM machines
   * Minor bug plus OpenMP bug in ESM implementation
   * Small bug leading to crashes when restarting some type of constrained
     magnetization calculations (courtesy of Florian Thoele, ETHZ)

New in 5.1 version:

   * "Cold restart" for Car-Parrinello dynamics
   * Calling QE from external codes made easier: see new subdirectory COUPLE
   * PW: Hybrid functionals for USPP and PAW (experimental)
   * PW: partial support to the use of k-point labels in the Brillouin zone
   * PW: Langevin dynamics with Smart Monte Carlo
   * CP and PW: Tkatchenko-Scheffler vdW correction (experimental)
   * GWW replaced by GWL (using Lanczos chains)
   * turboTDDFT: pseudo_Hermitian Lanczos algorithm and 
     Davidson-like diagonalization added
   * PWCOND with DFT+U
   * New functionals: gau-pbe, PW86 (unrevised), B86B, XDM (exchange-hole 
     dipole moment) model of dispersions, vdW-DF-obk8, vdW-DF-ob86 (Klimes
     et al), rVV10, vdW-DF2-b86r
   * PHonon: Calculation of phonon dispersions using the finite displacements 
     supercell approach. See subdirectory FD/ in PHonon.